--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -40,19 +40,30 @@
     - name: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
 #       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
-      register: helm_install_output
-      until: helm_install_output.rc == 0
-      retries: 5
-      delay: 2
+      register: helm_install_output_try1
       when: values is defined
       
     - name: helm install "{{helm_name}}" "{{chart_name}}" 
 #       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
       shell: helm install "{{helm_name}}" "{{chart_name}}" 
-      register: helm_install_output
-      until: helm_install_output.rc == 0
-      retries: 5
-      delay: 2
+      register: helm_install_output_try1
+      when: values is not defined
+      
+    - name: helm uninstall "{{helm_name}}"
+      shell: helm uninstall "{{helm_name}}"
+      ignore_errors: yes
+      when: helm_install_output_try1.rc != 0
+      
+    - name: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+#       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+      shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+      register: helm_install_output_try2
+      when: values is defined
+      
+    - name: helm install "{{helm_name}}" "{{chart_name}}" 
+#       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
+      shell: helm install "{{helm_name}}" "{{chart_name}}" 
+      register: helm_install_output_try2
       when: values is not defined
       
             
